tests/neg-custom-args/captures/vars-simple.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars-simple.scala:15:9 -----------------------------------
15 |    a = (g: String => String)      // error
   |         ^^^^^^^^^^^^^^^^^^^
   |         Found:    String => String
   |         Required: String ->{cap1, cap2} String
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars-simple.scala:16:8 -----------------------------------
16 |    a = g  // error
   |        ^
   |        Found:    (x: String) ->{cap3} String
   |        Required: (x: String) ->{cap1, cap2} String
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars-simple.scala:17:12 ----------------------------------
17 |    b = List(g) // error
   |        ^^^^^^^
   |        Found:    List[box (x$0: String) ->{cap3} String]
   |        Required: List[box String ->{cap1, cap2} String]
   |
   | longer explanation available when compiling with `-explain`
